# ob-memo-echo

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG_v0.6.0.md  CLAUDE.md  MIGRATION.md  PRD.md  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  TYPESCRIPT_7_UPGRADE_GUIDE.md  esbuild.config.mjs  install-plugin.sh  install-to-windows.sh  jest.config.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  vitest.config.ts
.sisyphus/drafts/: index-button-redesign.md
PRD/: PRD-refactor.md  PRD-v0.2.0.md  PRD-v0.3.0.md  PRD-v0.4.0.md  PRD-v0.5.0.md  PRD-v0.6.0.md  PRD-v0.7.0.md  PRD-v0.8.0.md
core/: API.md  CONFIG_REFACTOR.md  Cargo.toml  PRD.md  TESTING.md  TESTING_RUST.md  test_api.sh
core/src/: api.rs  chunker.rs  chunker_debug_test.rs  config.rs  db.rs  embedding.rs  image_context.rs  image_context_debug.rs  lib.rs  main.rs  search.rs
core/tests/: test_ollama.rs
design-system/memo-echo/: MASTER.md
docs/: ASSOCIATION_STYLES.md  UI_IMPROVEMENTS.md  v0.6.0-COMPLETION.md
plugin/: .gitignore  PRD.md  README.md  install-to-windows.sh  manifest.json  package-lock.json  package.json  styles.css  test-qwen-embedding.js
plugin/src/: api-client.ts  main.ts  process-manager.ts  search-view.ts
src/: association-view.ts  global.d.ts  indexing-view.ts  main.ts  recommendation-view.ts  search-view.ts  settings.ts  test-embedding.ts  unified-search-view.ts
src/__mocks__/: obsidian.ts
src/__tests__/: Sidebar.test.tsx  association-engine.test.ts  association-exporter.test.ts  association-integration.test.ts  (+33 more)
(+64 files in other folders)
