[package]
name = "ob-image-vector-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ob_image_vector_rs"
path = "src/lib.rs"


[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client (for Ollama API calls)
# 使用 rustls-tls 代替 OpenSSL，避免系统依赖问题
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Web Server (for future API endpoints)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Text Processing
regex = "1.10"

# Vector Database
qdrant-client = "1.8"

# System/Utils
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4"] }

# File System Operations
walkdir = "2.4"  # For scanning vault directories
